Feat: 상단바 기본 베이스 마련

--- a/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/MainWindow.xaml
+++ b/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/MainWindow.xaml
@@ -6,7 +6,25 @@
         xmlns:local="clr-namespace:CICDAutomate"
         mc:Ignorable="d"
         Title="CICDAutomate" Height="750" Width="1200" WindowStartupLocation="CenterScreen" Icon="/Resource/icon.png" ResizeMode="NoResize">
+    <Window.Resources>
+        <FontFamily x:Key="BMDOHYEON">/Font/BMDOHYEON_ttf.ttf</FontFamily>
+    </Window.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <Rectangle Grid.Row="0" Fill="#FF0487FF"/>
+        <Label Grid.Row="0" Content="프로젝트" FontFamily="{StaticResource BMDOHYEON}" FontSize="24" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0" Foreground="White"/>
+
+        <Button Grid.Row="1" Width="91" Height="40" FontFamily="{StaticResource BMDOHYEON}" HorizontalAlignment="Left" Margin="5,5,0,5" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" FontSize="20">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="/Resource/add.png" Width="20" Height="20" Margin="0,0,5,0"/>
+                <TextBlock Text="추가" Foreground="Black" Margin="0,3,0,0"/>
+            </StackPanel>
+        </Button>
+        <Border Grid.Row="1" BorderThickness="0,0,0,1" BorderBrush="LightGray"/>
     </Grid>
 </Window>
