--- a/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/MainWindow.xaml
+++ b/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/MainWindow.xaml
@@ -19,7 +19,7 @@
 
         
         <Rectangle Grid.Row="0" Fill="#FF0487FF"/>
-        <Label Grid.Row="0" Content="프로젝트" FontFamily="{StaticResource BMDOHYEON}" FontSize="24" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0" Foreground="White"/>
+        <Label Grid.Row="0" Content="파이프라인" FontFamily="{StaticResource BMDOHYEON}" FontSize="24" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0" Foreground="White"/>
 
         <Button Grid.Row="1" Width="91" Height="40" FontFamily="{StaticResource BMDOHYEON}" HorizontalAlignment="Left" Margin="5,5,0,5" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" FontSize="20">
             <StackPanel Orientation="Horizontal">
