--- a/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/Component/PipelineCardControl.xaml
+++ b/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/Component/PipelineCardControl.xaml
@@ -34,8 +34,8 @@
             <Button VerticalAlignment="Center" Width="35" Height="35" HorizontalAlignment="Right" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,0,0,5">
                 <Image x:Name="LogButton" Source="/Resource/log.png" Width="25" Height="25"/>
             </Button>
-            <Button VerticalAlignment="Center" Width="35" Height="35" HorizontalAlignment="Right" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,0,0,5">
-                <Image x:Name="EditButton" Source="/Resource/edit.png" Width="25" Height="25" MouseDown="EditButton_MouseDown"/>
+            <Button x:Name="EditButton" VerticalAlignment="Center" Width="35" Height="35" HorizontalAlignment="Right" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,0,0,5" Click="EditButton_MouseDown">
+                <Image Source="/Resource/edit.png" Width="25" Height="25"/>
             </Button>
             <Button VerticalAlignment="Center" Width="35" Height="35" HorizontalAlignment="Right" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Margin="0,0,5,5">
                 <Image x:Name="DeleteButton" Source="/Resource/delete.png" Width="25" Height="25"/>
