--- a/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/Component/PipelineJobListCardControl.xaml
+++ b/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/Component/PipelineJobListCardControl.xaml
@@ -20,9 +20,15 @@
             <Image x:Name="SelectImage" Source="/Resource/icon.png" Width="30" Height="30" HorizontalAlignment="Left" Margin="10,0,0,0"/>
             <Label Margin="5,8,0,5" x:Name="SelectTitleLabel" Content="Test Title" FontFamily="{StaticResource BMDOHYEON}" FontWeight="Bold" FontSize="24" HorizontalAlignment="Left"/>
         </StackPanel>
-        <Button x:Name="EditButton" Grid.Row="0" VerticalAlignment="Center" Width="50" Height="50" HorizontalAlignment="Right" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="EditButton_Click">
-            <Image Source="/Resource/edit.png" Width="30" Height="30"/>
-        </Button>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button x:Name="EditButton" Grid.Row="0" VerticalAlignment="Center" Width="50" Height="50" HorizontalAlignment="Right" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="EditButton_Click">
+                <Image Source="/Resource/edit.png" Width="30" Height="30"/>
+            </Button>
+            <Button x:Name="DeleteButton" Grid.Row="0" VerticalAlignment="Center" Width="50" Height="50" HorizontalAlignment="Right" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}">
+                <Image Source="/Resource/delete.png" Width="30" Height="30"/>
+            </Button>
+        </StackPanel>
+
         <Label Grid.Row="2" Margin="5,0,0,0" x:Name="DescriptionLabel" Content="Test Description" FontFamily="{StaticResource BMDOHYEON}" FontWeight="Bold" HorizontalAlignment="Left" FontSize="16"/>
     </Grid>
 </UserControl>
